added REACT_APP_API_URL to Dockerfile

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,9 @@
 FROM node:14-alpine AS builder
 ENV NODE_ENV production
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL $REACT_APP_API_URL
+
 # Add a work directory
 WORKDIR /app
 
